Training docs/Assignment8/Trial/src/objects/Client__c.object
<CustomObject>
	<description>This is a client custom object</description>
	<fields>
		<fullName>Description__c</fullName>
		<description>This shows the Description about the client Field</description>
		<inlineHelpText>Please enter the Description</inlineHelpText>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>Email_Address__c</fullName>
		<description>Displays the Email Address.</description>
		<inlineHelpText>Please Enter the Email Address.</inlineHelpText>
		<label>Email Address</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Mobile_No__c</fullName>
		<description>This field shows the Mobile No</description>
		<inlineHelpText>Please Enter the Mobile No</inlineHelpText>
		<label>Mobile No</label>
		<type>Phone</type>
	</fields>
	<fields>
		<fullName>Point_Of_Contact__c</fullName>
		<description>This is a Point Of Contact</description>
		<inlineHelpText>Please enter the point of Contact</inlineHelpText>
		<label>Point Of Contact</label>
		<length>20</length>
		<type>Text</type>
	</fields>
	<label>Client</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>CL-{0000}</displayFormat>
		<label>Client Code</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Clients</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>